--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
+#spring.mvc.pathmatch.matching-strategy= ant-path-matcher
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
